<resources>
    <string name="app_name">WeatherViewer</string>

    <string name="change_location">Change location</string>

    <string name="open_weather_maps_app_id">1c0de2bad631b41e4f99fa9bfeb79c88</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="change_loc_dialog">Change location</string>>

    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="description">Description</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="temperature">Temperature</string>

    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="last_update">Last update</string>
</resources>
