<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.havok.weatherviewer.Fragments.WeatherOfflineFragment">

    <TextView
        android:id="@+id/t_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textSize="10sp"
        android:text="@string/name" />

    <TextView
        android:id="@+id/t_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:textSize="10sp"
        android:text="@string/country" />

    <TextView
        android:id="@+id/t_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:textSize="10sp"
        android:text="@string/description" />

    <TextView
        android:id="@+id/t_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="149dp"
        android:layout_marginRight="149dp"
        android:textSize="10sp"
        android:text="@string/humidity" />

    <TextView
        android:id="@+id/t_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="87dp"
        android:layout_marginRight="87dp"
        android:textSize="10sp"
        android:text="@string/pressure" />

    <TextView
        android:id="@+id/t_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textSize="10sp"
        android:text="@string/temperature" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="80dp"/>

</RelativeLayout>
